--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
         <h1 id = "title">Survey Form</h1>
         <p id = "description">Please enter the information as honest as possible</p>
         <form action="" id = "Survey-form">
-            <label>name:</label>
-            <input type="text" placeholder="Please enter your name">
+            <label id = "name-label" for ="name">name:</label>
+            <input id = "name" type="text" placeholder="Please enter your name">
             <br>
-            <label for="">Email</label>
-            <input type="email" placeholder="Please enter your email">
+            <label id = "email-label" for="email">Email</label>
+            <input id = "email" type="email" placeholder="Please enter your email">
             <br>
-            <label for="">Number</label>
-            <input type="number" placeholder="Please enter a number">
+            <label id = "number-label" for="number">Number</label>
+            <input id = "number" type="number" placeholder="Please enter a number">
             <br>
-
+            <label for=""></label>
         </form>
     </div>
 </body>
