--- a/index.html
+++ b/index.html
@@ -18,9 +18,40 @@
             <input id = "email" type="email" placeholder="Please enter your email">
             <br>
             <label id = "number-label" for="number">Number</label>
-            <input id = "number" type="number" placeholder="Please enter a number">
+            <input id = "number" type="number" min = "10" max = "100" placeholder="Please enter your favorite number between 10 and 100">
             <br>
-            <label for=""></label>
+            <label for="">Please pick your favorite manga: </label>
+            <select name="dropdown" id="dropdown">
+                <option value="Fairy Tail">Fairy Tail</option>
+                <option value="One Piece">One Piece</option>
+                <option value="Pokemon">Pokemon</option>
+                <option value="Dragon Ball Z">Dragon Ball Z</option>
+                <option value="Bleach">Bleach</option>
+            </select>
+            <br>
+            <label for="">Pick your favorite contry: </label>
+            <br>
+            <input type="radio" name = "country" value="china">
+            <label for="china">China</label>
+            <br>
+            <input type="radio" name = "country" value="USA">
+            <label for="USA">USA</label>
+            <br>
+            <input type="radio" name = "country" value="japan">
+            <label for="japan">Japn</label>
+            <br>
+            <input type="radio" name = "country" value="spain">
+            <label for="spain">Spain</label>
+            <br>
+            <label for="#">Pick your favorite food, you can choose more than one</label>
+            <br>
+            <input type="checkbox" name = "chinese">
+            <label for="chinese">Chinese Food</label>
+            <br>
+            <input type="checkbox" name = "japanese">
+            <label for="japanese">Japanese Food</label>
+            <br>
+            <input type="submit">
         </form>
     </div>
 </body>
