add 5 checklists for user to choose

--- a/index.html
+++ b/index.html
@@ -51,6 +51,15 @@
             <input type="checkbox" name = "japanese">
             <label for="japanese">Japanese Food</label>
             <br>
+            <input type="checkbox" name = "korean">
+            <label for="korean">Korean Food</label>
+            <br>
+            <input type="checkbox" name = "yemenese">
+            <label for="yemenese">Yemenese Food</label>
+            <br>
+            <input type="checkbox" name = "fast-food">
+            <label for="fast-food">Fast Food</label>
+            <br>
             <input type="submit">
         </form>
     </div>
