complete the form

--- a/index.html
+++ b/index.html
@@ -60,7 +60,11 @@
             <input type="checkbox" name = "fast-food">
             <label for="fast-food">Fast Food</label>
             <br>
-            <input type="submit">
+            <label for="#">If you have any comment, please leave it here</label>
+            <br>
+            <textarea rows="4" cols="50"> </textarea>
+            <br>
+            <input id = "submit" type="submit">
         </form>
     </div>
 </body>
